--- a/ToolShed.Web/ToolShed.Web.csproj
+++ b/ToolShed.Web/ToolShed.Web.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+    <Folder Include="wwwroot\lib\css\" />
+    <Folder Include="wwwroot\lib\js\" />
   </ItemGroup>
 
   <ItemGroup>
