--- a/ToolShed.Web/appsettings.json
+++ b/ToolShed.Web/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "ToolShedProducts": "Server=(localdb)\\mssqllocaldb;Database=ToolShed;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ToolShedProducts": "Data Source=.\\;Database=ToolShed;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
